--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<script defer src="https://stats.lynked.at/script.js" data-website-id="81a0d119-ff01-44cb-9e66-36775acf7384"></script>
+		<script defer src="https://stats.docuwrap.com/script.js" data-website-id="81a0d119-ff01-44cb-9e66-36775acf7384"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
